# ee206-project

./: .gitignore  =0.2.1  README.md  ball_pub.py  ball_trajectory_node.py  ball_trajectory_node_faster.py  bridge_launcher.py  bridge_launcher_sim.py  environment.yml  eval.py  eval_ik.py  eval_ros.py  eval_ros_mod.py  frames.gv  handpicked_points.npz  iiwa14.xml  iiwa14_gantry.xml  mocap_test.py  mujoco_env_kuka_with_gantry.py  mujoco_env_kuka_with_gantry_table.py  mujoco_env_kuka_with_table.py  mujoco_env_kuka_with_table_mod.py  mujoco_env_only_kuka.py  mujoco_env_only_kuka_ik.py  mujoco_env_only_kuka_ros.py  mujoco_sim.py  mujoco_sim_ros1_mod.py  requirements.txt  ros1_bridge.py  ros1_bridge_sim.py  ros1_bridge_sim.py.save  ros2_bridge.py  ros2_bridge_sim.py  simple_table_spawn.py  simple_table_spawn_old.py  train.py
devel/: .catkin  local_setup.sh
install/: local_setup.sh  setup.sh
lbr_fri_ros2_stack_ws/install/: local_setup.sh  setup.sh
lbr_fri_ros2_stack_ws/log/: latest_build
lbr_fri_ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
log/: latest_build
logs/: evaluations.npz
pingpongbot/devel/: setup.sh
ppo_kuka_parallel_tensorboard/PPO_1/: events.out.tfevents.1729213097.sastry-ma-MS-7D25.588411.0
vision/ros2_ws/install/camera_feed/share/camera_feed/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
vision/ros2_ws/install/camera_feed/share/camera_feed/cmake/: camera_feedConfig.cmake
vision/ros2_ws/install/camera_feed/share/camera_feed/launch/: camera_feed.py
(+554 files in other folders)
