<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_feed</name>
  <version>0.0.0</version>
  <description>This package processes and publishes images from multiple cameras.</description>
  <maintainer email="ping.pong.robotics@gmail.com">pingpongproject</maintainer>
  <license>MIT</license> <!-- Update with your actual license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <!-- Add dependencies for Aravis -->
  <exec_depend>pkg-config</exec_depend>
  <exec_depend>libaravis-dev</exec_depend>

  <!-- Add dependency on my_sync_package -->
  <depend>my_sync_package</depend>

  <!-- Add dependency on interface package -->
  <depend>interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
